app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
rect {
  fill: none;
  width: 13rem;
  height: 3.5rem;
  stroke: #fff;
  stroke-width: 1px;
  stroke-dasharray: 528;
  stroke-dashoffset: 528;
  animation: progress 1.8s linear forwards;
}

svg .secondary {
  fill: none;
  width: 13rem;
  height: 3.5rem;
  stroke: #161616;
  stroke-width: 1px;
  stroke-dasharray: 528;
  stroke-dashoffset: 528;
  animation: progress 1.8s linear forwards;
}

@keyframes progress {
  100% {
    stroke-dashoffset: 0;
  }
}

.btn-line-anim {
  animation: lineAnim 0.5s linear forwards;
  animation-delay: 1.8s;
}

@keyframes lineAnim {
  100% {
    width: 2rem;
  }
}

.stroke {
  -webkit-text-stroke: 0.8px #fff;
}

.floating-label {
  @apply absolute top-[20%] left-[6%] text-slate-500 bg-transparent transition-all duration-300 pointer-events-none group-focus-within:bg-white group-focus-within:top-[-25%] group-focus-within:left-[4%] group-focus-within:text-[0.85rem] group-focus-within:px-1;
}

.floating-full-label {
  @apply absolute top-[20%] left-[3%] text-slate-500 bg-transparent transition-all duration-300 pointer-events-none group-focus-within:bg-white group-focus-within:top-[-25%] group-focus-within:left-[4%] group-focus-within:text-[0.85rem] group-focus-within:px-1;
}

.floating-textarea-label {
  @apply absolute top-[8%] left-[3%] text-slate-500 bg-transparent pointer-events-none group-focus-within:bg-white group-focus-within:top-[-9%] group-focus-within:left-[1.5%] group-focus-within:text-[.9rem] group-focus-within:px-[.1rem] transition-all duration-500 ease-out;
}

.floating-input {
  @apply w-full h-10 border border-slate-500 pl-[1rem] outline-none focus:border-black;
}

.floating-textarea {
  @apply w-full h-32 border border-slate-500 p-3 outline-none resize-none focus:border-black;
}

